Mappning av kod på gång. Databasen går att bygga med de klasser som är klara.

--- a/HearthstoneNHibernate/App.config
+++ b/HearthstoneNHibernate/App.config
@@ -1,5 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name ="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+  </configSections>
+  <log4net>
+    <root>
+      <level value="ALL"/>
+      <appender-ref ref="completelog"/>
+    </root>
+    <appender name="logfile" type="log4net.Appender.FileAppender">
+      <file value="../../log/logfile.log"/>
+      <appendToFile value="false"/>
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <layout type="log4net.layout.PatternLayout">
+        <conversionPattern value="%date - %message%newline"/>
+      </layout>
+    </appender>
+    <appender name="completelog" type="log4net.Appender.FileAppender">
+      <file value="../../log/complete.log"/>
+      <appendToFile value="false"/>
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <layout type="log4net.layout.PatternLayout">
+        <conversionPattern value="%date - %message%newline"/>
+      </layout>
+    </appender>
+    <logger name="NHibernate.SQL" additivity="false">
+      <level value="ALL"/>
+      <appender-ref ref="logfile" />
+    </logger>
+
+  </log4net>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
