Mappning för Spell är klar

--- a/HearthstoneNHibernate/App.config
+++ b/HearthstoneNHibernate/App.config
@@ -9,7 +9,7 @@
       <appender-ref ref="completelog"/>
     </root>
     <appender name="logfile" type="log4net.Appender.FileAppender">
-      <file value="../../log/logfile.log"/>
+      <file value="../../log/sql.log"/>
       <appendToFile value="false"/>
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
       <layout type="log4net.layout.PatternLayout">
