--- a/HearthstoneNHibernate/HearthstoneNHibernate.csproj
+++ b/HearthstoneNHibernate/HearthstoneNHibernate.csproj
@@ -56,6 +56,7 @@
     <Compile Include="CardClasses\CardSet.cs" />
     <Compile Include="CardClasses\PlayerClass.cs" />
     <Compile Include="CardClasses\Rarity.cs" />
+    <Compile Include="CardClasses\Spell.cs" />
     <Compile Include="CardClasses\Weapon.cs" />
     <Compile Include="Domain\Player.cs" />
     <Compile Include="Mapping\NHibernateMapper.cs" />
